--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.physics": "0.4.1-preview",
+    "com.unity.quicksearch": "2.0.2",
     "com.unity.rendering.hybrid": "0.5.2-preview.4",
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "2.1.4",
